[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Jingshao Chen", email = "jingshaochen@gmail.com"},
]
license-expression = "MIT"
dependencies = [
    "starlette-graphene3>=0.5.1",
    "uvicorn[standard]>=0.17.6",
    "pika>=1.2.0",
    "aio-pika>=7.1.2",
    "aiokafka>=0.7.2",
    "redis>=4.2.2",
]
requires-python = ">=3.10"

[project.urls]
Homepage = ""

[project.optional-dependencies]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.3.0",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
